Table f1_2025_drivers {
  meeting_key int
  session_key int [pk]
  driver_number int [pk]
  broadcast_name varchar(30)
  full_name varchar(30)
  name_acronym varchar(30)
  team_name varchar(30)
  team_colour varchar(30)
  first_name varchar(30)
  last_name varchar(30)
  headshot_url varchar(300)
  country_code varchar(100)
}
Table f1_2025_sessions {
  session_key int [pk]
  session_type varchar(30)
  session_name varchar(30)
  date_start datetime 
  date_end datetime 
  meeting_key int
  circuit_key int
  circuit_short_name varchar(30)
  country_key int
  country_code varchar(30)
  country_name varchar(30)
  location varchar(30)
  gmt_offset varchar(30)
  year int
  is_cancelled boolean
}
Table f1_2025_meetings{
  meeting_key int [pk]
  meeting_name varchar(100)
  meeting_official_name varchar(100)
  location varchar(30)
  country_key int
  country_code varchar(30)
  country_name varchar(30)
  country_flag varchar(200)
  circuit_key int
  circuit_short_name varchar(30)
  circuit_type varchar(30)
  circuit_info_url varchar(200)
  circuit_image varchar(200)
  gmt_offset varchar(30)
  date_start datetime 
  date_end datetime 
  year int
  is_cancelled boolean
}
Table f1_2025_laps{
  meeting_key int
  session_key int [pk]
  driver_number int [pk]
  lap_number int [pk]
  date_start datetime
  duration_sector_1 float
  duration_sector_2 float
  duration_sector_3 float
  i1_speed int
  i2_speed int
  is_pit_out_lap bool
  lap_duration float
  st_speed float
}
Table f1_2025_session_result{
  position int
  driver_number int [pk]
  number_of_laps int
  dnf bool
  dns bool
  dsq bool
  duration float
  gap_to_leader float
  meeting_key int
  session_key int [pk]
}
Table f1_2025_pit{
  date datetime [pk]
  session_key int [pk]
  lane_duration float
  driver_number int [pk]
  meeting_key int
  lap_number int [pk]
  stop_duration float
}
Table f1_2025_championship_teams{
  meeting_key int
  session_key int [pk]
  team_name varchar(30) [pk]
  position_start int
  position_current int
  points_start int
  points_current int  
}
Table f1_2025_championship_drivers{
  meeting_key int
  session_key int [pk]
  driver_number int [pk]
  position_start int
  position_current int
  points_start int
  points_current int
}
Table f1_2025_starting_grid{
  position int
  driver_number int [pk]
  lap_duration float
  meeting_key int
  session_key int [pk]
}
Table f1_2025_stints{
  meeting_key int
  session_key int [pk]
  stint_number int [pk]
  driver_number int [pk]
  lap_start int
  lap_end int
  compound varchar(30)
  tyre_age_at_start int
}

Ref: "f1_2025_sessions"."session_key" < "f1_2025_drivers"."session_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_drivers"."meeting_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_sessions"."meeting_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_laps"."session_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_laps"."meeting_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_session_result"."session_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_session_result"."meeting_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_pit"."session_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_pit"."meeting_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_championship_teams"."session_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_championship_drivers"."session_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_stints"."session_key"

Ref: "f1_2025_sessions"."session_key" < "f1_2025_starting_grid"."session_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_starting_grid"."meeting_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_stints"."meeting_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_championship_teams"."meeting_key"

Ref: "f1_2025_meetings"."meeting_key" < "f1_2025_championship_drivers"."meeting_key"